meta/y.output

state 0
	$accept: .doc $end 
	Content: .    (2)

	.  reduce 2 (src line 29)

	Content  goto 2
	doc  goto 1

state 1
	$accept:  doc.$end 

	$end  accept
	.  error


state 2
	doc:  Content.    (1)
	Content:  Content.FreeTokens 

	ident  shift 4
	stringLiteral  shift 8
	'('  shift 5
	')'  shift 6
	'='  shift 7
	.  reduce 1 (src line 25)

	FreeTokens  goto 3

state 3
	Content:  Content FreeTokens.    (3)

	.  reduce 3 (src line 32)


state 4
	FreeTokens:  ident.    (4)

	.  reduce 4 (src line 37)


state 5
	FreeTokens:  '('.    (5)

	.  reduce 5 (src line 38)


state 6
	FreeTokens:  ')'.    (6)

	.  reduce 6 (src line 38)


state 7
	FreeTokens:  '='.    (7)

	.  reduce 7 (src line 38)


state 8
	FreeTokens:  stringLiteral.    (8)

	.  reduce 8 (src line 38)


8 terminals, 4 nonterminals
9 grammar rules, 9/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
53 working sets used
memory: parser 2/240000
0 extra closures
5 shift entries, 1 exceptions
3 goto entries
0 entries saved by goto default
Optimizer space used: output 8/240000
8 table entries, 0 zero
maximum spread: 8, maximum offset: 4
